2010-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ArrayExtension.cs : remove MonoTODO.

2010-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeValueSerializer.cs, NameReferenceConverter.cs :
	  implement.

2010-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlnsCompatibleWithAttribute.cs
	  IComponentConnector.cs
	  XmlLangPropertyAttribute.cs
	  XamlSetMarkupExtensionEventArgs.cs
	  PropertyDefinition.cs
	  XmlnsDefinitionAttribute.cs
	  XmlnsPrefixAttribute.cs : another corcompare fix.

2010-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XData.cs : actual implementation.

2010-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ArrayExtension.cs
	  TrimSurroundingWhitespaceAttribute.cs
	  RuntimeNamePropertyAttribute.cs
	  TypeExtension.cs
	  MarkupExtensionReturnTypeAttribute.cs
	  DateTimeValueSerializer.cs
	  IValueSerializerContext.cs
	  RootNamespaceAttribute.cs
	  MarkupExtension.cs
	  Reference.cs
	  AmbientAttribute.cs
	  NameScopePropertyAttribute.cs
	  ValueSerializer.cs
	  DictionaryKeyPropertyAttribute.cs
	  WhitespaceSignificantCollectionAttribute.cs
	  ConstructorArgumentAttribute.cs
	  IUriContext.cs
	  INameScope.cs
	  StaticExtension.cs
	  IProvideValueTarget.cs
	  ValueSerializerAttribute.cs
	  IXamlTypeResolver.cs
	  ContentWrapperAttribute.cs
	  ContentPropertyAttribute.cs
	  DependsOnAttribute.cs
	  NullExtension.cs
	  UidPropertyAttribute.cs : several corcompare fixes.

2010-04-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeExtensionConverter.cs : implement.

2010-04-14  Atsushi Enomoto  <atsushi@ximian.com>

	* ValueSerializer.cs : implement most of them.

2010-04-12  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeExtension.cs, StaticExtension.cs : add [TypeConverter].

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* StaticExtensionConverter.cs, TypeExtensionConverter.cs :
	  new internal converter types (almost dummy yet).

2010-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* ArrayExtension.cs
	  TypeExtension.cs